# snekrs

./: .gitignore  Cargo.toml  README.md
src/: game.rs  main.rs
